fix grid layout issue and sort 1st page issue

--- a/src/components/Feed/Grid/Grid.module.css
+++ b/src/components/Feed/Grid/Grid.module.css
@@ -8,7 +8,6 @@
 
 .gridItemContainer {
     border: 1px solid #d3d3d3;
-    flex: 1;
 }
 
 .image {
@@ -45,8 +44,7 @@
 
 @media (min-width: 992px) {
     .image {
-        /* width: max-content; */
-        min-width: 10vw;
         max-width: 22vw;
+        width: max-content;
     }
 }
