--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -1,16 +1,8 @@
 .container {
-    /* padding: 10px 100px; */
     width: 100vw;
 }
 
-.subContainer {
-}
-
-@media (min-width: 600px) {
-    
-}
-
-@media(min-width: 1280px) {
+@media(min-width: 992px) {
     .container {
         width: 70vw;
     }
